# travelwarning-api

./: 404.html  CNAME  README.md  generator_config.yaml  index.html  openapi.yaml  robots.txt  sitemap.xml
python-client/: README.md  pyproject.toml
python-client/.openapi-generator/: FILES
python-client/deutschland/travelwarning/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/travelwarning/api/: default_api.py
python-client/deutschland/travelwarning/apis/: __init__.py
python-client/deutschland/travelwarning/model/: __init__.py  adress_liste.py  adresse.py  artikel.py  download.py  reisewarnung.py  reisewarnung_zusammenfassung.py  response_address.py  response_address_response.py  response_artikel.py  response_artikel_response.py  response_download.py  response_download_response.py  response_warning.py  response_warning_response.py  (+2 more)
python-client/docs/: DefaultApi.md  Reisewarnung.md  ReisewarnungZusammenfassung.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: modules.rst
python-client/test/: test_adress_liste.py  test_adresse.py  test_artikel.py  test_default_api.py  test_download.py  test_reisewarnung.py  test_reisewarnung_zusammenfassung.py  test_response_address.py  test_response_address_response.py  test_response_artikel.py  test_response_artikel_response.py  test_response_download.py  test_response_download_response.py  test_response_warning.py  test_response_warning_response.py  test_response_warnings.py  test_response_warnings_response.py
(+3 files in other folders)
